--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -65,29 +65,99 @@ tbody.rowlink{
 	//border:1px solid #505458;
 	background:#fff;
 	position:absolute;
-	right:50px;
+	left:260px;
 	top:0px;
+	width: 730px;
+	height: 500px;
 }
 
 #toolbox{
-	width:290px;
-	//background:#22262e;
-	padding:15px 10px;
+	width:240px;
+	background:#fff;
+	//padding:15px 10px;
+	.tools, .qstns{
+		padding: 0 10px 20px;
+		ul{
+			padding:0;
+			li{
+				float:left;
+				border:2px solid #e5e9ec;
+				//background:#e5e9ec;
+				width:65px;
+				height:65px;
+				margin:4px;
+				list-style-type:none;
+				cursor: move;
+				text-align: center;
+				padding:0;
+				padding-top: 5%;
+				font-size: 12px;
+				&:hover{
+					background:#0090d9;
+					transition: all 0.2s linear;
+					
+					a{
+						color: #fff;
+						cursor: move;
+					}
+				}
+				
+				i{
+					font-size: 20px;
+				}
+			}
+		}
+	}
+	.qstns{
+		ul{
+			li{
+				width: 102px;
+				height: 40px;
+				font-weight: bold;
+				i{
+					font-size: 16px;
+				}
+			}
+		}
+	}
+}
+
+.dock{
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 240px;
+	height: 500px;
+	//padding:15px 10px;
+}
+
+.scrollup{
+	left:auto;
+	right:50px;
+}
+
+.tiles-head{
+	padding: 10px 18px 5px 24px;
+}
+
+.docket{
+	.tile-footer.drag{
+		cursor: move;
+	}
 	ul{
 		padding:0;
 		li{
 			float:left;
-			border:1px solid #e5e9ec;
-			background:#e5e9ec;
-			width:82px;
-			height:82px;
+			border:2px solid #e5e9ec;
+			//background:#e5e9ec;
+			width:65px;
+			height:65px;
 			margin:4px;
 			list-style-type:none;
 			cursor: move;
 			text-align: center;
 			padding:0;
-			padding-top: 7%;
-			font-size: 14px;
+			padding-top: 5%;
 			a{
 				cursor: move;
 				&:hover{
@@ -95,8 +165,38 @@ tbody.rowlink{
 				}
 			}
 			i{
-				font-size: 25px;
+				font-size: 42px;
 			}
 		}
+	}
+}
+
+.docket-body{
+	background: #fff;
+	padding:15px 10px;
+	color: #000;
+	label{
+		color:#777a80;
+	}
+	select.marks{
+		width: auto;
+	}
+}
+
+.mashmenu{
+	position: relative;
+	z-index: 1;
+	margin-bottom: 25px;
+
+	.menu{
+		.sub-content{
+			background-color: #fff;
+			padding:20px;
+		}
+	}
+
+	.wrapper{
+		width: auto;
+		min-height: 400px;
 	}
 }
