--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -18,27 +18,34 @@
 		margin-top: 0;
 		span{
 			margin-top: 0;
+			width: 15px;
+			&:after{
+				left:2px;
+			}
 		}
 	}	
 	.meta.name{
 		width: 30%;
 	}
+	.meta.area{
+		width: 15%;
+	}
 	.meta{
 		//width: 210px;
-		width: 17%;
-		padding: 0 4% 0 2%;
+		width: 20%;
+		padding: 0 2% 0 2%;
 		float: left;
 		}
 	.img_wrapper{
 		//width: 125px;
-		width: 50%;
+		width: 40%;
 		float: left;
 		height: 65px;
 		margin-right: 10px;
 	}
 	.titles{
 		vertical-align: top;
-		width: 45%;
+		width: 54%;
 		float: left;
 		word-break: break-word;
 		h2{
