--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/content-builder/element/templates/element.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/content-builder/element/templates/element.html
@@ -5,7 +5,7 @@
 </form>
 <div class="element-controls">
   <div class="aj-imp-drag-handle">
-    <p title="Move"><span class="bicon icon-uniF140"></span></p>
+    <p title="Move"><span class="fa fa-ellipsis-h"></span></p>
   </div>
   <div class="aj-imp-delete-btn"><span title="Delete">&times;</span></div>
   <div class="aj-imp-settings-btn"><span title="Settings" class="glyphicon glyphicon-cog"></span></div>
