builder style changes

--- a/HTML/assets/less/variables.less
+++ b/HTML/assets/less/variables.less
@@ -59,3 +59,11 @@
 
 @color-important: @color-danger;
 @font-color-important: @font-color-danger;
+
+/*Custom Colors*/
+@logo-blue: #182944;
+@dash-grey: #AAAAAA;
+@blue-grey: #849FB0;
+@3-grey: #333333;
+@preview-grey: #F3F3F3;
+@dark-blue: #29333F;
