--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -116,32 +116,15 @@
 	}
 }
 
-/*.element-controls{
-	border: 2px solid lighten(@color-grey, 30%);
-	transition: all 0.2s linear;
-	&:hover{
-		border-color: lighten(@color-blue, 0%);
-		transition: all 0.2s linear;
-	}
-}*/
-
-/****Colors****/
-@logo-blue: #182944;
-@dash-grey: #AAAAAA;
-@blue-grey: #849FB0;
-@3-grey: #333333;
-@preview-grey: #F3F3F3;
-@dark-blue: #29333F;
-
 .element-wrapper {
 		border: 2px solid @preview-grey;
 		padding-top: 7px;
-		margin: 0 0 12px;
+		margin: 4px 0 11px;
 		.ease;
 		//border-radius: 4px;
 		.element-controls {
 			position: relative;
-			min-height: 100px;
+			//min-height: 100px;
 			.aj-imp-drag-handle, .aj-imp-delete-btn, .aj-imp-settings-btn {
 				position: absolute;
 				display: none;
@@ -302,11 +285,13 @@
 		top: 1em;
 		bottom: 1.2em;
 		left: 50%;
+		z-index: 2;
+		height: 74px;
 		p {
 			cursor: ew-resize;
 			text-align: center;
 			display: block;
-			color: @color-blue;
+			color: lighten(@dash-grey, 20%);
 			font-size: 18px;
 			line-height: 6px;
 			width: 40px;
@@ -321,11 +306,14 @@
 			-moz-transform: rotate(-90deg);
 			-ms-transform: rotate(-90deg);
 			-o-transform: rotate(-90deg);
-			&:hover {
+			&:hover, &:active {
 				background: @color-blue;
 				color: #fff;
 				border-color: @color-blue;
 			}
+		}
+		&:hover{
+			background: transparent;
 		}
 	}
 	.row {
@@ -333,16 +321,16 @@
 		position: relative;
 		border: 1px solid transparent;
 		.column {
-			background: #fff;
+			background: transparent;
 			height: 100%;
 			position: relative;
 			background-clip: content-box;
 			background: #fff;
 			&.empty-column {
-				background: url(../images/empty-drag-bg.svg) no-repeat center center #fff;
+				background: url(../../../images/empty-drag-bg.svg) no-repeat center center #fff;
 				background-clip: content-box;
 				background-size: contain;
-				min-height:100px;
+				min-height:100px !important;
 				padding: 0.5em;
 			}
 			.container {
