--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -9,7 +9,7 @@
 	left: 260px;
 	top: 0;
 	width: 730px;
-	height: 500px;
+	min-height: 500px;
 	padding: 15px 10px;
 }
 
@@ -213,7 +213,7 @@
 			>.element-markup {
 				>.row {
 					>.column {
-						border-right: 1px dotted lighten(@dash-grey, 10%);
+						//border-right: 1px dotted lighten(@dash-grey, 10%);
 						&:last-child {
 							border-right: 0;
 						}
