minor style changes

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -9,7 +9,7 @@
 	left: 260px;
 	top: 0;
 	width: 730px;
-	min-height: 500px;
+	min-height: 500px !important;
 	padding: 15px 10px;
 }
 
@@ -313,7 +313,7 @@
 			}
 		}
 		&:hover{
-			background: transparent;
+			//background: transparent;
 		}
 	}
 	.row {
