--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -306,10 +306,12 @@
 			-moz-transform: rotate(-90deg);
 			-ms-transform: rotate(-90deg);
 			-o-transform: rotate(-90deg);
+			.ease;
 			&:hover, &:active {
 				background: @color-blue;
 				color: #fff;
 				border-color: @color-blue;
+				.ease;
 			}
 		}
 		&:hover{
