textbooks listing content creator integrated with index

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
@@ -2,7 +2,7 @@
 <div class="chat-toggler">	
 		<!-- BEGIN PROFILE PICTURE -->
 		<div class="profile-pic"> 
-			<img width="35" height="35" data-src-retina="http://localhost/walnut/wp-content/html/assets/img/profiles/avatar_small2x.jpg" data-src="http://localhost/walnut/wp-content/html/assets/img/profiles/avatar_small.jpg" alt="" src="http://localhost/walnut/wp-content/html/assets/img/profiles/avatar_small.jpg"> 
+			<img width="35" height="35" data-src-retina="http://localhost/walnut/wp-content/themes/walnut/images/avtar.png" data-src="http://localhost/walnut/wp-content/themes/walnut/images/avtar.png" alt="" src="http://localhost/walnut/wp-content/themes/walnut/images/avtar.png"> 
 		</div>  
 		<!-- END PROFILE PICTURE -->     			
 	</div>
