--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -1,25 +1,21 @@
-
   <div class="meta name">
-    <div class="img_wrapper"> <img alt="" src="http://localhost/walnut/wp-content/html/assets/img/others/acadia.jpg"> </div>
+    <div class="img_wrapper"> <img alt="" src="{{cover_pic}}"> </div>
     <div class="titles">
-      <h2><a href="#">Acadia</a></h2>
-      <p><em>Maine</em></p>
+      <h2><a href="#">{{name}}</a></h2>
+      <p><em>{{author}}</em></p>
     </div>
   </div>
+  
   <div class="meta class">
-    <p>10</p>
+    <p>{{#classes}}
+      Class: {{.}},
+      {{/classes}}</p>
   </div>
+
   <div class="meta rec">
-    <ul>
-      <li>Camping</li>
-      <li>Climbing</li>
-      <li>Fishing</li>
-      <li>Swimming</li>
-    </ul>
+    {{chapter_count}}
   </div>
+
   <div class="meta area">
-    <p>47,452.80</p>
-  </div>
-  <div class="meta area">
-    <p>47,452.80</p>
-  </div>
+    <p>{{count}}</p>
+  </div
