--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks.html
@@ -1,17 +1,22 @@
 <div class="content">
+  <ul class="breadcrumb">
+        <li>
+          <p>Dashboard</p>
+        </li>
+    <li>
+          <a href="#"> Content Management</a>
+        </li>
+        <li><a class="active" href="#">Textbooks</a> </li>
+      </ul>
   <div class="page-title"> <i class="icon-custom-left"></i>
       <h3>Text<span class="semi-bold">books</span></h3>
     </div>
     <div id="Filters" class="pull-left">
-          <div class="btn-group"> <a class="btn dropdown-toggle btn-demo-space" data-toggle="dropdown" href="#"> <span class="anim150">Class</span> <span class="caret"></span> </a>
+          <div class="btn-group"> <a class="btn dropdown-toggle btn-demo-space" data-toggle="dropdown" href="javascript://"> <span class="anim150">Class</span> <span class="caret"></span> </a>
             <ul class="dropdown-menu">
-              <li data-dimension="region" data-filter="all" class="active"><a href="#">All</a></li>
-              <li data-dimension="region" data-filter="alaska"><a href="#">Alaska</a></li>
-              <li data-dimension="region" data-filter="intermountain"><a href="#">Intermountain</a></li>
-              <li data-dimension="region" data-filter="northeast"><a href="#">Northeast</a></li>
-              <li data-dimension="region" data-filter="pacific_west"><a href="#">Pacific</a> </li>
-              <li data-dimension="region" data-filter="southeast"><a href="#">Southeast</a></li>
-            </ul>
+              {{#classes}}
+              <li data-dimension="region" data-filter="southeast"><a href="javascript://">{{.}}</a></li>
+              {{/classes}}
           </div>
       </div>
         <div class="clearfix"></div>
@@ -22,8 +27,7 @@
             <div id="SortByName" class="meta name active desc"> Name &nbsp; <span data-order="desc" data-sort="data-name" class="sort anim150 asc active"></span> <span data-order="asc" data-sort="data-name" class="sort anim150 desc"></span> </div>
             <div class="meta class">Class <span data-order="desc" data-sort="data-class" class="sort anim150 asc"></span> <span data-order="asc" data-sort="data-class" class="sort anim150 desc"></span></div>
             <div class="meta rec">Chapters</div>
-            <div class="meta area"> Sections </div>
-            <div class="meta"> Questions/Quizzes </div>
+            <div class="meta area"> Questions/Quizzes </div>
           </div>
 
           <!-- FAIL ELEMENT -->
