save, preview buttons added

--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -26,14 +26,6 @@
   min-height: 500px !important;
   padding: 15px 10px;
 }
-#myCanvas-miki {
-  background: none;
-  position: absolute;
-  left: 260px;
-  top: 0;
-  width: 750px;
-  height: auto;
-}
 #toolbox {
   width: 240px;
   background: #fff;
@@ -88,6 +80,13 @@
   top: 0;
   width: 240px;
   height: 500px;
+}
+.dock .builder_actions {
+  background: #e5e9ec;
+  padding-bottom: 15px;
+}
+.dock .btn-cons2 {
+  width: 118px;
 }
 .docket .tile-footer.drag {
   cursor: move;
@@ -416,9 +415,7 @@
 
 }
 .row {
-  margin: 0 0 1em;
   position: relative;
-  border: 1px solid transparent;
 }
 .row .column {
   background: transparent;
@@ -548,20 +545,4 @@ tbody.rowlink td {
 }
 .mashmenu .filters .table-tools-actions {
   margin: 0;
-}
-
-
-/*miki css*/
-
-.cbp_tmtimeline > li .cbp_tmtime {
-	display: block;
-	width: 13%;
-	padding-right: 0px;
-}
-.cbp_tmtimeline > li .cbp_tmtime .date {
-	font-size: 1.0em;
-}
-
-.togglelink{
-	cursor:pointer;
 }
