--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/content-builder/elements/row/settings/templates/settings.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/content-builder/elements/row/settings/templates/settings.html
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-sm-12">
     <form action="" method="POST" role="form" class="form-horizontal">
-      <div class="form-group">
+    <!--   <div class="form-group">
         <label for="" class="col-sm-4 control-label">Choose Style</label>
         <div class="col-sm-8">
           <select name="style">
@@ -24,7 +24,7 @@
         <div class="col-sm-8"><span class="checkbox">
             <input type="checkbox" name="draggable"/></span></div>
         <div class="clearfix"></div>
-      </div>
+      </div> -->
       <div class="form-group">
         <label for="" class="col-sm-4 control-label">No of columns</label>
         <div class="col-sm-8">
