--- a/wp-content/themes/walnut/walnut/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut/dev/css/style.css
@@ -7494,7 +7494,7 @@ ul.my-friends li .profile-pic{
 
 .fail_element{
 	position: absolute;
-	opacity: 0;
+	/*opacity: 0;*/
 	top: 100px;
 	text-align: center;
 	width: 50%;
