--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
@@ -16,7 +16,7 @@
 			<ul aria-labelledby="user-options" role="menu" class="dropdown-menu pull-right">
 				<li><a href="#">My Account</a></li>
 				<li class="divider"></li>                
-				<li><a href="#"><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
+				<li><a id="user_logout" href="javascript://"><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
 			</ul>
 		</li>
 		<!-- END SETTINGS -->
