--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -5,10 +5,11 @@
 #myCanvas{
 	//border: 1px solid #505458;
 	background: #fff;
-	position: absolute;
-	left: 260px;
+	//position: absolute;
+	//left: 260px;
 	top: 0;
 	width: 730px;
+	float: left;
 	min-height: 500px !important;
 	padding: 15px 10px;
 
@@ -23,6 +24,7 @@
 #toolbox{
 	width: 240px;
 	background: #fff;
+	float: left;
 	//padding: 15px 10px;
 	.tools, .qstns{
 		padding: 0 10px 20px;
@@ -72,8 +74,8 @@
 }
 
 .dock{
-	position: absolute;
-	right: 0;
+	//position: absolute;
+	//right: 0;
 	top: 0;
 	width: 240px;
 	height: 500px;
