--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -19,16 +19,22 @@
 }
 #myCanvas {
   background: #fff;
-  position: absolute;
-  left: 260px;
   top: 0;
   width: 730px;
+  float: left;
   min-height: 500px !important;
   padding: 15px 10px;
+}
+#myCanvas li.ui-sortable-placeholder {
+  list-style: none;
+  padding: 20px 0;
+  background: #d0d0d0;
+  border: none;
 }
 #toolbox {
   width: 240px;
   background: #fff;
+  float: left;
 }
 #toolbox .tools,
 #toolbox .qstns {
@@ -42,6 +48,7 @@
 #toolbox .qstns ul li {
   float: left;
   border: 2px solid #e5e9ec;
+  background: #fff;
   width: 65px;
   height: 65px;
   margin: 4px;
@@ -75,8 +82,6 @@
   font-size: 16px;
 }
 .dock {
-  position: absolute;
-  right: 0;
   top: 0;
   width: 240px;
   height: 500px;
@@ -282,7 +287,8 @@
 }
 .element-wrapper.hover-class:hover > .element-controls .aj-imp-drag-handle,
 .element-wrapper.hover-class:hover > .element-controls .aj-imp-delete-btn,
-.element-wrapper.hover-class:hover > .element-controls .aj-imp-settings-btn {
+.element-wrapper.hover-class:hover > .element-controls .aj-imp-settings-btn,
+.element-wrapper.hover-class:hover > .element-controls .aj-imp-col-divider {
   display: block;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
@@ -357,6 +363,7 @@
 }
 .aj-imp-col-divider {
   position: absolute !important;
+  display: none;
   width: 1px;
   background: #dddddd;
   top: 1em;
