--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -1,7 +1,7 @@
   <div class="meta name">
     <div class="img_wrapper"> <img alt="" src="{{cover_pic}}"> </div>
     <div class="titles">
-      <h2><a class="textbook_titles" data-id="{{term_id}}" href="javascript://">{{name}}</a></h2>
+      <h2><a class="textbook_titles" data-id="{{term_id}}" href="#textbook/{{term_id}}">{{name}}</a></h2>
       <p><em>{{author}}</em></p>
     </div>
   </div>
