--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -142,6 +142,16 @@
 	}
 }
 
+.textProp{
+	.slider.slider-horizontal{
+		display: inline-block;
+		margin-left: 15px;
+	}
+}
+.textarea{
+	width: 100%;
+}
+
 .element-wrapper {
 	border: 2px solid @preview-grey;
 	padding-top: 7px;
