--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -139,6 +139,13 @@
 .docket-body select.marks {
   width: auto;
 }
+.textProp .slider.slider-horizontal {
+  display: inline-block;
+  margin-left: 15px;
+}
+.textarea {
+  width: 100%;
+}
 .element-wrapper {
   border: 2px solid #f3f3f3;
   padding-top: 7px;
