--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -7,9 +7,7 @@
   </div>
   
   <div class="meta class">
-    <p>{{#classes}}
-      Class {{.}},
-      {{/classes}}</p>
+    <p>{{class_string}}</p>
   </div>
 
   <div class="meta rec">
