--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -508,6 +508,19 @@
   padding: 4px 12px;
   margin-right: 3px;
 }
+body {
+  background-color: #e5e9ec;
+}
+#site_main_container {
+  opacity: 0;
+}
+#site_main_container.show {
+  opacity: 1;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+}
 .header .quick-section2 {
   margin-top: 16px;
   margin-right: 10px;
