--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -9,7 +9,7 @@ body{
 
 #site_main_container{
 	opacity: 0;
-	&.show{
+	&.showAll{
 		opacity:1;
 		-webkit-transition: opacity .5s ease-in-out;
     -moz-transition: opacity .5s ease-in-out;
