--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -152,6 +152,17 @@
 	width: 100%;
 }
 
+
+.textFormat{
+	.btn, .btn:focus{
+		background-color: #d1dade;
+	}
+	.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled]{
+		background-color: @color-primary;
+		color: #fff;
+	}
+
+}
 .element-wrapper {
 	border: 2px solid @preview-grey;
 	padding-top: 7px;
@@ -438,3 +449,5 @@
 		}
 	}
 }
+
+
