--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -14,7 +14,7 @@
 			<!-- END MOBILE HEADER -->
 			<!-- BEGIN LOGO -->	
 			<a href="#">
-				<img width="106" height="21" data-src-retina="./wp-content/themes/walnut/images/walnutlearn.png" data-src="./wp-content/themes/walnut/images/walnutlearn.png" alt="" class="logo" src="./wp-content/themes/walnut/images/walnutlearn.png">
+				<img width="106" height="21" data-src-retina="{{logourl}}" data-src="{{logourl}}" alt="" class="logo" src="{{logourl}}">
 			</a>
 			<!-- END LOGO --> 
 			<!-- BEGIN LOGO NAV BUTTONS -->
