--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -6,7 +6,7 @@
 	<!-- BEGIN ONE LEVEL MENU -->
 	<li class="start active">
 		<a href="javascript:;">
-			<i class="icon-custom-ui"></i>
+			<i class="fa fa-book"></i>
 			<span class="title">Content Management</span>
 			<span class="arrow"></span>
 		</a>
