--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks.html
@@ -8,7 +8,7 @@
         </li>
         <li><a class="active" href="#">Textbooks</a> </li>
       </ul>
-  <div class="page-title"> <i class="icon-custom-left"></i>
+  <div class="page-title"> <!--<i class="icon-custom-left"></i>-->
       <h3>Text<span class="semi-bold">books</span></h3>
     </div>
     <div id="Filters" class="pull-left">
