media query added for login page mobile testing

--- a/HTML/assets/less/mixins.less
+++ b/HTML/assets/less/mixins.less
@@ -539,3 +539,9 @@
           transition: all 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
 }
 
+.fadein{
+  -webkit-transition: opacity .5s ease-in-out;
+     -moz-transition: opacity .5s ease-in-out;
+      -ms-transition: opacity .5s ease-in-out;
+       -o-transition: opacity .5s ease-in-out;
+}
