--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -152,6 +152,6 @@ tbody.rowlink{
 
 @media(max-width:767px){
 	.login-container{
-		margin-top: 20px !important;
+		margin-top: 20px !important; /*For mobile app testing*/
 	}
 }
