textbook single changes

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
 @import "builder.less";
+@import "chapters.less";
 @import "class.less";
 
 body{
@@ -35,6 +36,12 @@ body{
 
 .page-sidebar{
 	background-color: darken(@color-primary, 10%) !important;
+
+	.page-sidebar-wrapper > ul > li{
+		&>a, &> a i{
+			color: #fff;
+		}
+	}
 
 	.page-sidebar-wrapper > ul > li:hover >a{
 		background-color: @color-primary;
