--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-full.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-full.html
@@ -17,7 +17,7 @@
 					<div id="textbook-description-region"></div>	
 				</div>
 				<div class="col-lg-7">
-					<div id="chapters-list-region"></div>
+					<div id="chapters-list-region" class="listBox"></div>
 				</div>
 			</div>
 			<!-- END PLACE PAGE CONTENT HERE -->
