--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
@@ -3,7 +3,7 @@
 	<h3>Textbook<span class="semi-bold"> {{name}}</span></h3>		
 </div>
 <!-- END PAGE TITLE -->
-<div class="tiles green cover-pic-wrapper">						
+<div class="tiles cover-pic-wrapper">						
 	<div class="overlayer bottom-right"></div>
 <img src="{{cover_pic}}" alt="">
 </div>
